RESOLVED FIXED129701
WinCairo doesn't build without MEDIA_CONTROLS_SCRIPT enabled
https://bugs.webkit.org/show_bug.cgi?id=129701
Summary WinCairo doesn't build without MEDIA_CONTROLS_SCRIPT enabled
Alex Christensen
Reported 2014-03-04 13:40:52 PST
Here are some fixes to the build system. I also enabled MEDIA_SOURCE on Windows, but it didn't fix my problem. Would anyone else be interested in me upstreaming that work?
Attachments
Patch (5.27 KB, patch)
2014-03-04 13:42 PST, Alex Christensen
no flags
Patch (5.16 KB, patch)
2014-03-04 15:21 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2014-03-04 13:42:20 PST
Alex Christensen
Comment 2 2014-03-04 14:29:50 PST
Comment on attachment 225810 [details] Patch make-js-file-arrays.py should not be changed. DerivedSources.make should add an if statement to not run it if USER_AGENT_SCRIPTS is empty
Alex Christensen
Comment 3 2014-03-04 15:21:47 PST
Jer Noble
Comment 4 2014-03-04 15:45:51 PST
Comment on attachment 225822 [details] Patch r=me
WebKit Commit Bot
Comment 5 2014-03-04 16:28:13 PST
Comment on attachment 225822 [details] Patch Clearing flags on attachment: 225822 Committed r165084: <http://trac.webkit.org/changeset/165084>
WebKit Commit Bot
Comment 6 2014-03-04 16:28:16 PST
All reviewed patches have been landed. Closing bug.
Brent Fulgham
Comment 7 2014-04-02 17:14:01 PDT
This patch broke Apple Windows builds when the build directory was deleted. UserAgentScripts.h is not getting generated.
Alex Christensen
Comment 8 2014-04-02 21:07:18 PDT
It may also have been https://bugs.webkit.org/show_bug.cgi?id=130597 that broke it. I'm trying to support the WinCairo build with and without VIDEO enabled, which depends on MEDIA_CONTROLS_SCRIPT and VIDEO_TRACK
Note You need to log in before you can comment on or make changes to this bug.