Fixed Windows build without MEDIA_CONTROLS_SCRIPT enabled. https://bugs.webkit.org/show_bug.cgi?id=129701

Patch by Alex Christensen <achristensen@webkit.org> on 2014-03-04
Reviewed by Jer Noble.

* WebCore.vcxproj/WebCore.vcxproj:
* DerivedSources.cpp:
Moved UserAgentScriptsData.cpp to DerivedSources.cpp to only be built if MEDIA_CONTROLS_SCRIPT is enabled.
* DerivedSources.make:
Only generate UserAgentScripts.cpp/h when USER_AGENT_SCRIPTS is non-empty.
* rendering/RenderThemeWin.cpp:
Only include UserAgentScripts.h when MEDIA_CONTROLS_SCRIPT is enabled.

Canonical link: https://commits.webkit.org/147746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165084 268f45cc-cd09-0410-ab3c-d52691b4dbfc